<resources>
    <string name="app_name">OrderFood</string>
    <string name="splash_text">Highly committed to quality products &amp; excellent services</string>

    // Tab Menu
    <string name="home">Đồ ăn</string>
    <string name="cart">Giỏ hàng</string>
    <string name="feedback">Phản hồi</string>
    <string name="contact">Liên hệ</string>
    <string name="order">Lịch sử</string>

    // action
    <string name="action_ok">Đồng ý</string>
    <string name="action_cancel">Hủy bỏ</string>

    // dialog
    <string name="waiting_message">Vui lòng đợi…</string>

    // msg
    <string name="error_not_connect_to_internet">Vui lòng kiểm tra kết nối mạng của bạn</string>
    <string name="msg_exit_app">Bạn có muốn thoát ứng dụng?</string>

    <string name="category_title">Danh mục</string>
    <string name="food_suggest">Gợi ý món ăn</string>
    <string name="food_detail_title">Chi tiết món ăn</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="added_to_cart">Đã thêm vào giỏ hàng</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="send_feedback_success">Gửi phản hồi thành công!</string>
    <string name="name_require">Vui lòng nhập Họ và Tên</string>
    <string name="comment_require">Vui lòng nhập phản hồi của bạn</string>
    <string name="order_cart">Đặt Hàng</string>
    <string name="total">Tổng Tiền:</string>
    <string name="delete">Xóa</string>
    <string name="confirm_delete_food">Xác nhận xóa khỏi giỏ hàng</string>
    <string name="message_delete_food">Bạn có chắc chắn muốn xóa món ăn này không?</string>
    <string name="dialog_cancel">Hủy</string>
    <string name="confirm_payment">Xác nhận thanh toán</string>
    <string name="message_payment">Xác nhận thanh toán bàn: </string>
    <string name="message_payment_success">Thanh toán thành công </string>
    <string name="message_payment_failure">Thanh toán Thất bại </string>


    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="address_delivery">Địa chỉ giao hàng</string>
    <string name="message_enter_infor_order">Vui lòng điền đầy đủ thông tin giao hàng</string>
    <string name="hint_search_name">Tên món ăn…</string>
    <string name="price_label">Giá:</string>
    <string name="description_label">Mô tả</string>
    <string name="more_image_label">Một số hình ảnh khác</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="payment_method_cash">Tiền mặt</string>

    <string name="feedback_name">Họ và Tên (*)</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_phone">Số điện thoại</string>
    <string name="feedback_comment">Bình luận (*)</string>
    <string name="send_feedback">Gửi phản hồi</string>

    <string name="label_id">Mã đơn hàng:</string>
    <string name="label_name">Họ tên:</string>
    <string name="label_phone">Số điện thoại:</string>
    <string name="label_address">Địa chỉ nhận:</string>
    <string name="label_price">Tổng tiền: </string>
    <string name="label_date">Ngày đặt hàng:</string>
    <string name="label_payment">Thanh toán:</string>
    <string name="label_menu">Thực đơn:</string>

    <string name="status_new">Chờ xử lý</string>
    <string name="status_cancel">Hủy đơn hàng</string>
    <string name="status_process">Đang giao hàng</string>
    <string name="status_success">Thành công</string>
    <string name="status_fail">Thất bại</string>
    <string name="quantity">Số lượng:</string>
    <string name="list_food_order">Danh sách món ăn trong đơn hàng</string>


    <string name="msg_get_date_error">Lỗi đã xảy ra, vui lòng thử lại sau</string>
    <string name="msg_order_success">Đặt hàng thành công, vui lòng check đơn hàng trong phần Lịch sử</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">name</string>
    <string name="code">code</string>
    <string name="todo">TODO</string>
    <string name="sign_out">Sign out</string>
    <string name="profile">Profile</string>
    <string name="table">Bàn: </string>
    <string name="waiter">Nhân viên:</string>
    <string name="time">Thời gian:</string>
    <string name="suggest_food">Gợi ý món ăn</string>
    <string name="food">Đồ ăn</string>
    <string name="drinks">Đồ uống</string>
    <string name="Smoothie">Sinh tố</string>
    <string name="tea">Trà</string>
    <string name="sweet_dessert_soup">Chè</string>
    <string name="other_drinks">Đồ uống khác</string>
    <string name="chicken">Gà,Vịt</string>
    <string name="beef">Bò</string>
    <string name="seafood">Hải sản</string>
    <string name="other_food">Đồ ăn khác</string>
    <string name="pork">Lợn</string>
    <string name="detail">Detail</string>
    <string name="payment">Thanh toán</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>