<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:viewBindingIgnore="true"
    android:orientation="vertical"
    android:padding="@dimen/define_dimen_10">
    <TextView

        android:id="@+id/tv_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/table"
        android:textColor="@color/black"
        android:textSize="@dimen/define_dimen_18"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/define_dimen_5"
        tools:ignore="SpUsage" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/define_dimen_10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/define_dimen_6"
            android:layout_toStartOf="@+id/tv_price_order"
            android:text="@string/order_detail"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_xnormal"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_price_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="0 vnđ"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_foods_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_5"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        android:layout_marginBottom="@dimen/define_dimen_10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:layout_marginBottom="@dimen/define_dimen_10"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_cancel_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/define_dimen_10"
            android:layout_weight="1"
            android:background="@drawable/bg_gray_shape_corner_6"
            android:gravity="center"
            android:padding="@dimen/define_dimen_10"
            android:paddingStart="@dimen/define_dimen_16"
            android:paddingEnd="@dimen/define_dimen_16"
            android:text="@string/cancel"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/tv_create_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_green_shape_corner_6"
            android:gravity="center"
            android:padding="@dimen/define_dimen_10"
            android:text="@string/order_cart"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

</LinearLayout>