<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/define_dimen_10"
    android:layout_marginEnd="@dimen/define_dimen_10"
    app:cardCornerRadius="@dimen/define_dimen_6">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_10"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/tv_label_waiter"
                android:layout_width="@dimen/define_dimen_100"
                android:layout_height="wrap_content"
                android:text="@string/waiter"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/tv_waiter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/define_dimen_5"
                android:layout_toEndOf="@+id/tv_label_waiter"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_small" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/label_menu"
                android:layout_width="@dimen/define_dimen_100"
                android:layout_height="wrap_content"
                android:text="@string/label_menu"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/tv_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/text_size_small"
                android:layout_toEndOf="@+id/label_menu"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/label_date"
                android:layout_width="@dimen/define_dimen_100"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/time"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/define_dimen_5"
                android:layout_toEndOf="@+id/label_date"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_small" />
        </RelativeLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>