<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:visibility="gone">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/btn_payment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/define_dimen_16"
                >
                <TextView
                    android:id="@+id/tv_label_table"
                    android:layout_width="@dimen/define_dimen_100"
                    android:layout_height="wrap_content"
                    android:text="@string/table"
                    android:textSize="@dimen/define_dimen_18"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/tv_table_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/define_dimen_5"
                    android:layout_toEndOf="@+id/tv_label_table"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/define_dimen_18"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />
            </RelativeLayout>


            <LinearLayout
                android:id="@+id/layout_bill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/define_dimen_16"
                android:paddingEnd="@dimen/define_dimen_16">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/define_dimen_10">

                    <TextView
                        android:id="@+id/total_label_menu"
                        android:layout_width="@dimen/define_dimen_100"
                        android:layout_height="wrap_content"
                        android:text="@string/label_menu"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:id="@+id/tv_total_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/define_dimen_5"
                        android:layout_toEndOf="@+id/total_label_menu"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_small" />
                </RelativeLayout>



                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/define_dimen_10"
                    android:background="@color/textColorSecondary"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/define_dimen_10">

                    <TextView
                        android:id="@+id/label_total_amount"
                        android:layout_width="@dimen/define_dimen_100"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/total"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_total_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/define_dimen_5"
                        android:layout_toEndOf="@+id/label_total_amount"
                        android:textColor="@color/bottomTabActive"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/define_dimen_5">

                    <TextView
                        android:id="@+id/label_payment"
                        android:layout_width="@dimen/define_dimen_100"
                        android:layout_height="wrap_content"
                        android:text="@string/label_payment"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:id="@+id/tv_payment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/define_dimen_5"
                        android:layout_toEndOf="@+id/label_payment"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_small"
                         />
                </RelativeLayout>
            </LinearLayout>




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textSize="@dimen/define_dimen_18"
                android:layout_marginTop="@dimen/define_dimen_20"
                android:textStyle="bold"
                tools:ignore="SpUsage"
                android:layout_marginStart="@dimen/define_dimen_20"

                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_order"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/define_dimen_10"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/define_dimen_10"
        android:layout_marginTop="@dimen/define_dimen_10"
        android:layout_marginBottom="@dimen/define_dimen_10"
        android:background="@drawable/bg_green_shape_corner_6"
        android:gravity="center"
        android:padding="@dimen/define_dimen_12"
        android:text="@string/payment"
        android:textColor="@color/white"
        android:textSize="@dimen/define_dimen_18"
        android:textStyle="bold"
        tools:ignore="SpUsage" />

</RelativeLayout>